Add bootstrap styling and content to index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #C1DFF0;
+  text-align: center;
+  margin: 5% 15%;
+}
+
 .rubyRails, .phpDrupal, .javaAndroid, .cssDesign, .cSharpNet {
   display: none;
 }
