Add header styling to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,23 @@ body {
   margin: 5% 15%;
 }
 
+#myHeader {
+  padding: 0;
+}
+
+#myHeader p {
+  padding: 10px;
+}
+
+#titleHeader {
+  background-color: #36494E;
+  color: #eee;
+  width: inherit;
+}
+
+#surveyForm {
+  background-color: #eee;
+}
 .rubyRails, .phpDrupal, .javaAndroid, .cssDesign, .cSharpNet {
   display: none;
 }
