Add margin spacing and colors to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,20 @@ body {
 #surveyForm {
   background-color: #eee;
 }
+
+.form-group {
+  margin-top: 5%;
+}
+
+.question5 {
+  margin-bottom: 7%;
+}
+
 .rubyRails, .phpDrupal, .javaAndroid, .cssDesign, .cSharpNet {
   display: none;
+  margin-top: 5px;
+}
+
+.buttonContainer {
+  padding-bottom: 5px;
 }
