--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,16 @@
 body {
   background-color: #C1DFF0;
-  text-align: center;
   margin: 5% 15%;
 }
 
 #myHeader {
+  text-align: center;
   padding: 0;
 }
 
 #myHeader p {
   padding: 10px;
+  font-size: 16px;
 }
 
 #titleHeader {
@@ -20,12 +21,16 @@ body {
 
 #surveyForm {
   background-color: #eee;
+  margin: 0 auto;
 }
 
 .form-group {
-  margin-top: 5%;
+  margin-top: 3%;
 }
 
+.form-control {
+  width: 50%;
+}
 .question5 {
   margin-bottom: 7%;
 }
@@ -37,4 +42,8 @@ body {
 
 .buttonContainer {
   padding-bottom: 5px;
+}
+
+.panel {
+  width: 75%;
 }
