--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,14 @@ body {
   margin-top: 5px;
 }
 
+#noSelection {
+  display: none;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  color: red;
+}
+
 .buttonContainer {
   width: 100%;
   display: flex;
